hello-kubernetes/applications/overlays/prd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prd
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
